--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
         <body> <!--tle not so vidni deli spletne strani-->
 
+            <h1>Tole sm glihkar naredu na githubu</h1>
+
             <h1> <!-- to je kr velik naslov, H so naslovi in se s številko poleg manjšajo-->
             TO JE H1 
             </h1>
@@ -152,6 +154,7 @@
 
 
     </head>
+
 
 
 </html> <!-- \je konec, vedno v paru-->
