--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <body> <!--tle not so vidni deli spletne strani-->
 
             <h1>Tole sm glihkar naredu na githubu</h1>
+									
+
+									<h1>Tole sm glihkar naredu na tablci</h1>
 
             <h1> <!-- to je kr velik naslov, H so naslovi in se s številko poleg manjšajo-->
             TO JE H1 
