test direkt iz vs code

--- a/index.html
+++ b/index.html
@@ -199,12 +199,16 @@
           }
         </script>
         
-        <!--FORM-->
+         <!--FORM-->
         <form action="index.php" method="POST"> <!--action-kam hočš poslat podatke, -->
           <label for="username">uporabnisko ime</label> <!--for se uporabla, če ma kdo screen readerja, pa da lohk kasnej id uporablaš-->
-          <input type="text" id="username" required> <!-- required da morš nujno neki not napisat če hočeš submit stisnt-->
+          <input type="text" id="username" placeholder="Batman" minlenght="6" required> <!-- required da morš nujno neki not napisat če hočeš submit stisnt-->
           <input type="submit">
+          <input type="rest">
         </form>
+
+        <br>
+        <h1>TO JE SHRANJENO Z VS CODE</h1>
 
 
 
