--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
         <br>
         <h1>TO JE SHRANJENO Z VS CODE</h1>
 
+		<h1>TO JE SHRANJE NO Z GITHUBOM</h1>
+
 
 
         
@@ -225,4 +227,5 @@
 
 
 </html> <!-- \je konec, vedno v paru-->
+
 
