--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             moja spltna stran
 
         </title>
+		<!--ŠE ZADN TEST KAKO SINHRONIZIRAT-->
 
         <!--da dodaš ikono-->
         <link rel="icon" type="image/jpg" href="slike/ikona.jpg"> <!--specifaja raletionsip med tem dokumetom in zunanjim fajlom-->
@@ -276,5 +277,6 @@
 
 
 </html> <!-- \je konec, vedno v paru-->
+
 
 
