ok zdej pa res zadn

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         </title>
 		<!--ŠE ZADN TEST KAKO SINHRONIZIRAT-->
+        <!--okpredzdaen-->
 
         <!--da dodaš ikono-->
         <link rel="icon" type="image/jpg" href="slike/ikona.jpg"> <!--specifaja raletionsip med tem dokumetom in zunanjim fajlom-->
