dodal povezavo do css strani

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
 
             <main>
+				<a href="CSS.html">CSS STRAN</a>
+
+				<br>
 
                 <h1> <!-- to je kr velik naslov, H so naslovi in se s številko poleg manjšajo-->
                 TO JE H1 
@@ -272,6 +275,7 @@
 
 
 </html> <!-- \je konec, vedno v paru-->
+
 
 
 
