dodal nova poglavja tako v css kot html

--- a/CSS.html
+++ b/CSS.html
@@ -77,7 +77,55 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum nam perferendis explicabo eligendi in deserunt quo incidunt illum ad libero facilis nemo rerum accusantium quia assumenda esse, doloribus minus ipsa.
     </div>
 
-  </body>
+    <!--DISPLY-->
+    <!--deli se na block level elemnte (tisti k zasedejo od leve do desne strani) in inline (zasedeje sam tist k reabjo)-->
+    <div id="div">div</div>
+    <span id="span">span</span>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi vitae sapiente distinctio fuga consequatur in, ex velit quis, unde incidunt doloremque? Vel esse quos distinctio debitis praesentium impedit tenetur laudantium.
+
+
+    <div class="višina">
+        <h2>To je #1</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate praesentium quibusdam eum, ducimus dignissimos modi, doloremque aspernatur eveniet dolorum molestiae aliquid ad necessitatibus neque distinctio dolor, in architecto ipsum beatae.</p>
+    </div>
+
+    <!--HEIGHT-->
+    <div class="kontejner">
+        <div class="višina">
+            <h2>To je #2</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate praesentium quibusdam eum, ducimus dignissimos modi, doloremque aspernatur eveniet dolorum molestiae aliquid ad necessitatibus neque distinctio dolor, in architecto ipsum beatae.</p>
+        </div>
+    </div>
+
+    <!--POZICIJA
+    relative= kjer je ponavadi
+    fixed= se premika glede na viewport
+    absolute= kje se nahaja glede na prednika, pač tist v kerem se nahaja div p /p /div, v tem primiru p je v div
+    sticky=da ostane na istem mestu nw glede a scrollaš al ne (uporabno!!!) npr. če je neki sticky na opx bo se kazal na vrhu tut če si scrollov niži
+    static =default-->
+
+    <div id="poz1"></div>
+
+    <div id="poz2"></div>
+
+    <!--KOMBINATORJI
+    natančno so opisani v css-->
+
+
+    <div id="kombinator">
+        <p>TO JE 1</p>
+        <p>TO JE 2</p>
+        <div><p>TO JE 3</p></div>
+        <p>TO JE 4</p>
+        <p>TO JE 5</p>
+    </div>
+    <p>TO JE 4</p>
+    <p>TO JE 5</p>
+
+    
+</body>
+
+
 
 
 </html>
