--- a/CSS.html
+++ b/CSS.html
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <!--POZICIJA
+    <!--POZICIJA / LOKACIJA
     relative= kjer je ponavadi
     fixed= se premika glede na viewport
     absolute= kje se nahaja glede na prednika, pač tist v kerem se nahaja div p /p /div, v tem primiru p je v div
